# BikeThing

./: Cargo.toml
src/: ds.rs  inputs.rs  main.rs  prelude.rs  spedometer.rs  ui.rs
src/ds/: queue.rs  stack.rs  vec.rs
src/inputs/: button.rs  rot.rs
src/ui/: context.rs  screens.rs  state.rs
src/ui/screens/: menu.rs  text.rs
